--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body{
     height: 400px;
 }
 
-.col-opacity h2,p{
+.col-opacity h2, #textoe{
     color: #ffffff;
 }
 
@@ -42,6 +42,19 @@ body{
 #covierteconduct{
     background-color: #f7b617;
     border: none;
+}
+
+.btnsend{
+    width: 100%;
+    background-color: #37dfe2;
+    border: none;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 10px 0;
+}
+
+.btnsend:hover{
+    background-color: #f7b617;
 }
 /* Fín CSS 4ta Sección*/
 
