--- a/css/main.css
+++ b/css/main.css
@@ -44,9 +44,13 @@ body{
     border: none;
 }
 
+.modalConvDrive{
+    background-color: #a9a9a9;
+}
+
 .btnsend{
     width: 100%;
-    background-color: #37dfe2;
+    background-color: #5bc0de;
     border: none;
     font-weight: bold;
     font-size: 16px;
