--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@ body{
 .font-bold{
     font-weight: bold; 
 }
+
+.font-white{
+    color: #fff;
+}
 /* Fín Clases Reutilizables */
 
 /* CSS  4ta sección*/
@@ -62,7 +66,104 @@ body{
 }
 /* Fín CSS 4ta Sección*/
 
+/* Inicio Estilos Footer */
+footer{
+    background-color: #2b2b2b;
+    padding: 40px;
+}
+
+.mobile-footer ul{
+    list-style: none;
+  }
+  
+  .mobile-footer ul>li>a{
+      color: #fff;
+  }
+  
+  .fa {
+      color: #fff;
+      margin-left: 8px;
+      margin-bottom: 20px;
+  }
+  
+  .container-app{
+    overflow: auto;
+    width: 60%;
+  }
+  
+  .container-app a>img{
+      width: 70%;
+      margin-bottom: 20px;
+  }
+  
+  .none{
+      display: none;
+  }
+
+  .desktop-footer ul{
+    list-style: none;
+ }
+ 
+ .desktop-footer ul>li>a{
+     color: #fff;
+ }
+ 
+ .flex{
+   display: flex;
+   align-items: flex-start;
+   
+ }
+ 
+ .flex-end{
+   align-self: flex-end;
+ }
+/* Fin Estilos Footer */
 
 
-
-
+/* Inicio Media */
+@media (min-width: 768px) {
+    .position{
+       float: right;
+    }
+ 
+    .mobile-info{
+        display: none;
+    }
+ 
+    .mobile-celular{
+        display: none;
+    }
+ 
+    .map-1{
+        background-image: url(../assets/images/map2.PNG);
+        height: 450px;
+        width: 400px;
+    }
+ 
+    .container-map-graffy {
+        width: 420px;
+    }
+ 
+    .mobile-footer{
+        display: none;
+    }
+ 
+    .container-app a>img{
+        width: 150px;
+    }
+ }
+ 
+ @media (max-width: 768px){
+     .destok-info{
+         display: none;
+     }
+ 
+     .desktop-celular{
+         display: none;
+     }
+ 
+     .desktop-footer{
+         display: none;
+     }
+    }     
+/* Fin Media */
