--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,7 @@ body{
     border: none;
     padding: 10px 30px;
     font-weight: 700;
+    margin: 20px;
 }
 
 .container-map-graffy{
@@ -134,7 +135,11 @@ body{
   height: 400px;
 }
 
-
+#imp1, #imp2{
+  background-color: #ffc107;
+  margin: 3px;
+  color: #ffffff;
+}
 
 /* Fin CSS 5ta Sección */
 
@@ -229,9 +234,9 @@ footer{
          display: none;
      }
 
-    #mapmobile{
+    /* #mapmobile{
         display: inherit;
-    }
+    } */
 
     #mapdescktop{
         display: none;
@@ -265,7 +270,7 @@ footer{
     background-image: url(../assets/images/taxi.jpg);
   /*   width: 100%;
     height: 100%; */
-} 
+}
 .orange{
     background-color: #f7b617;
 }
@@ -277,7 +282,7 @@ footer{
     width: 100%;
     line-height: 1.1;
     margin-top: 5%;
-    margin-bottom: 5%; 
+    margin-bottom: 5%;
 }
 .panel-right-main p{
     font-size: 3rem;
@@ -285,7 +290,7 @@ footer{
 }
 .button-register{
     margin:1.5rem;
-   
+
 }
 #sect-hero span{
     color:#fff;
@@ -369,7 +374,7 @@ section.orange > div > div > div > div.col-md-5.col-md-offset-1 > p{
     padding-right: 15rem;
 }
 .color-w{
-    color: #fff;    
+    color: #fff;
 }
 .color-red{
     color:red;
@@ -386,11 +391,11 @@ section.orange > div > div > div > div.col-md-5.col-md-offset-1 > p{
 }
 .button-dropdow{
     background-color:gainsboro;
-  
+
 }
 .a-dropdow{
     color: #333;
-    
+
 }
 .a-dropdow:hover{
     color: #333;
